deploy/tracking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracking-db
spec:
  selector:
    app: tracking-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
