deploy/tracking/tracking-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracking-ui
spec:
  selector:
    app: tracking-ui
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
