deploy/tracking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracking-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: tracking.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracking-ui
                port:
                  number: 80
